--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^2.0.47",
     "@ai-sdk/openai": "^2.0.6",
     "@auth/core": "^0.37.0",
     "@convex-dev/auth": "^0.0.90",
